--- a/backend/config.env
+++ b/backend/config.env
@@ -1,7 +1,7 @@
 HOST = 'localhost'
 MONGO_PORT = '27017'
 DATABASE = 'mern'
-DB_USER = 'wassim-azirar'
+DB_USER = 'captain-steel'
 DB_PASSWORD = 'linkedin'
 
 # you can get one from https://www.grc.com/passwords.htm
